deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs-container
          image: ecr-image
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /service/ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 2
