deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  selector:
    app: nestjs
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
