deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: "kj-ingress"
    alb.ingress.kubernetes.io/healthcheck-path: /api/ping
spec:
  rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: nodejs-service
              port:
                number: 80
